--- a/Bankist__app(style).css
+++ b/Bankist__app(style).css
@@ -17,8 +17,11 @@ html {
 body {
    background-image:url('img/credit-card.jpeg');
    background-repeat:no-repeat;
-   background-size:100% 100%;
-   height: auto;
+   /*background-size:100% 100%;*/
+   height: 100%;
+   width: 100%;
+   background-size: cover;
+
 }
 
 .body__header {
@@ -253,8 +256,8 @@ body {
   text-align: center;
   color: black;
   background-color: white;
-  border: 0.1rem solid black;
-  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  border: 0.2rem solid black;
+  border-radius: 1rem 1rem 1rem 1rem;
   font-size: 2rem;
 }
 
@@ -264,13 +267,14 @@ body {
     text-align: center;
     color: black;
     background-color: white;
-    border: 0.1rem solid black;
-    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+    border: 0.2rem solid black;
+    border-radius: 1rem 1rem 1rem 1rem;
     font-size: 2rem;
   }
 
 .forms__sendler {
     height: 4rem;
+    transition: all .2s;
 }
 .forms__sendler:hover{
     /*height: 4.5rem;*/
@@ -791,7 +795,7 @@ body {
     margin-top: 2rem;
     /*left: 0;*/
     justify-self: start;
-    width: 85%;
+    width: 50rem;
     height: auto;
     display: grid;
     grid-auto-flow: row;
@@ -806,6 +810,39 @@ body {
   margin-top: 0.5rem;
 
 }
+
+.value-box__block--content {
+    padding: 0.5rem;
+    font-size: 2rem;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: auto auto 1fr;
+    align-items: center;
+    gap: 3rem;
+}
+
+.box-deposit {
+    text-transform: uppercase;
+    border: 0.1rem solid black;
+    padding: 0.2rem;
+    border-radius: 1rem;
+    background-color: rgba(0, 128, 0, 0.842);
+    color: white;
+}
+
+.box-withdrawal {
+    text-transform: uppercase;
+    border: 0.1rem solid black;
+    padding: 0.2rem;
+    border-radius: 1rem;
+    background-color: rgba(255, 0, 0, 0.801);
+    color: white;
+}
+
+.box-summ {
+    justify-self: end;
+}
+
 
 .user-box {
     width: 85%;
@@ -822,7 +859,8 @@ body {
   height: 15rem;
   border: 0.1rem solid black;
   border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
+  box-shadow: 0 1rem 2rem black;
 }
 
 .block-title {
@@ -985,7 +1023,7 @@ body {
 .form-line3 {
     border-radius: 0.8rem 0.8rem 0.8rem 0.8rem;
     width: 10rem;
-    background-color: rgba(255, 34, 0, 0.575);
+    background-color: rgba(255, 45, 0, 0.5);
     text-align: center;
 }
 
@@ -1000,7 +1038,7 @@ body {
 }
 
 .block-close {
-   background-color: rgba(255, 0, 0, 0.842);
+   background-color: rgba(255, 0, 0, 0.801);
    color: black;
 }
 
@@ -1041,7 +1079,7 @@ body {
 }
 
 [class*=-endp]:hover {
-    transform:scale(1.2) skewX(-10deg);
+    transform:scale(1.2);
   }
 
 [class*=-endp]:active {
@@ -1060,10 +1098,12 @@ body {
       font-size: 2.5rem;
       font-weight: 500;
       justify-self: end;
+      transition: all .2s;
   }
 
   .currency-btn:hover {
       transform: scale(1.1);
+      cursor: pointer;
   }
 
   .currency-btn:active {
@@ -1076,6 +1116,7 @@ body {
 
   .currency-cancel:hover {
     transform: scale(1.2);
+    cursor: pointer;
 }
 
   .currency-ch {
@@ -1090,9 +1131,23 @@ body {
   }
 
   .currency:hover {
+       cursor: pointer;
        transform: scale(1.2);
        border: 0.2rem solid black;
        border-radius: 100%;
+  }
+
+  .form--focus {
+      transition: all .2s;
+  }
+
+  .form--focus:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem black;
+  }
+
+  .form--focus:focus:invalid {
+      border-color: rgba(255, 30, 0, 0.941);
   }
 
 @keyframes fromLeft1 {
